<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nodes</name>
  <version>0.0.0</version>
  <description>ROS2_Homework</description>
  <maintainer email="77627794+ARDUINO33@users.noreply.github.com">juwon</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- <depend>action_msgs</depend> -->
  <depend>interfaces</depend>

  <exec_depend>ros2launch</exec_depend>
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
